# Pi-SDK-Tutorial

ADC_eval/adc/: log.txt
ADC_eval/pico_adc/: CMakeLists.txt  pico_adc.cpp
adc/: .gitignore  CMakeLists.txt  main.c
blink/: CMakeLists.txt  main.c
uartComs/: CMakeLists.txt  main.c
uartComs/adc/: CMakeLists.txt
